      defunct: use instead the C99 function \code{hypot}.

      \item \command{R CMD build --binary} is formally defunct:
      \command{R CMD INSTALL --build} has long been the preferred
      alternative.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Dummy.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{nobs(mle(*, nobs = .))} now works.
    }
  }
}

\section{CHANGES IN R VERSION 2.13.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{iconv()} no longer translates \code{NA} strings as
      \code{"NA"}.
      
      \item \code{persp(box = TRUE)} now warns if the surface extends
      outside the box (since occlusion for the box and axes is computed
      assuming the box is a bounding box). (\PR{202}.)
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Building the vignettes is now part of running \command{make}
      from an SVN checkout: a separate \command{make vignettes} is no
      longer required.

      These vignette PDFs are now made with \code{keep.source = TRUE} and
      hence will be laid out differently.
    }
  }

  \subsection{LICENCE}{
    \itemize{
      \item No parts of \R are now licensed solely under GPL-3.  The
      licences for packages \pkg{rpart} and \pkg{survival} have been
      changed, which means that the licence terms for \R as distributed
      are GPL-2 | GPL-3.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{plot.lm(which = 5)} was intended to order factor
      levels in increasing order of mean standardized residual.   It
      ordered the factor labels correctly, but could plot the wrong
      group of residuals against the label.  (\PR{14545})

      \item \code{mosaicplot()} could clip the factor labels, and could
      overlap them with the cells if a non-default value of
      \code{cex.axis} was used.  (Related to \PR{14550}.)
      
      \item \code{sort.int()} would strip the class of an object, but